--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,22 @@
 {
-    "name": "hiper/swoole-gateway",
-    "description": "SwooleGateway是基于Swoole开发的一款分布式长连接开发框架。",
-    "homepage": "https://github.com/xiaonian0430/swoole-gateway",
+    "name": "xielei/swoole-worker",
+    "description": "SwooleWorker是基于Swoole开发的一款分布式长连接开发框架。常驻内存，协程，高性能高并发；分布式部署，横向扩容，使得能支持庞大的连接数；无感知安全重启，无缝升级代码；接口丰富，支持单个发送，分组发送，群发广播等接口。可广泛应用于云计算、物联网（IOT）、车联网、智能家居、网络游戏等领域。",
+    "keywords": [
+        "php",
+        "swoole"
+    ],
+    "homepage": "https://github.com/xielei/swoole-worker",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=8.0",
-        "ext-swoole": "^4.8.0"
+        "php": ">=7.2",
+        "ext-swoole": "^4.6.0"
     },
-    "require-dev": {
-        "swoole/ide-helper": "*"
+    "suggest": {
+        "swoole/ide-helper": "This package contains IDE help files for Swoole. You may use it in your IDE to provide accurate autocompletion."
     },
     "autoload": {
         "psr-4": {
-            "SwooleGateway\\": "src/"
+            "Xielei\\Swoole\\": "src/"
         }
     }
 }
